--- a/package.json
+++ b/package.json
@@ -10,17 +10,25 @@
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch"
 	},
 	"devDependencies": {
+		"@iconify-json/material-symbols": "^1.1.89",
+		"@iconify-json/mdi": "^1.1.68",
 		"@melt-ui/pp": "^0.3.2",
 		"@melt-ui/svelte": "^0.83.0",
 		"@sveltejs/adapter-auto": "^3.0.0",
 		"@sveltejs/kit": "^2.0.0",
 		"@sveltejs/vite-plugin-svelte": "^3.0.0",
+		"autoprefixer": "^10.4.20",
 		"daisyui": "^4.12.10",
+		"postcss": "^8.4.41",
 		"svelte": "^4.2.7",
 		"svelte-check": "^3.6.0",
 		"tailwindcss": "^3.4.10",
 		"typescript": "^5.0.0",
+		"unplugin-icons": "^0.19.2",
 		"vite": "^5.0.3"
 	},
-	"type": "module"
+	"type": "module",
+	"dependencies": {
+		"pocketbase": "^0.21.4"
+	}
 }
